--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@ background-color:#f1f1f1;
 text-align:center;
 padding:45px;
 ">
-<img src='https://cn.bing.com/images/search?view=detailV2&ccid=j7n3cHhJ&id=068392BD8DC9EB3E125F1150A34C1FC7DB3F2B0E&thid=OIP.j7n3cHhJUuG5301ZpgJz_gHaEu&mediaurl=https%3a%2f%2fts1.tc.mm.bing.net%2fth%2fid%2fR-C.8fb9f770784952e1b9df4d59a60273fe%3frik%3dDis%252f28cfTKNQEQ%26riu%3dhttp%253a%252f%252fn.sinaimg.cn%252fsinakd20210225ac%252f49%252fw518h331%252f20210225%252f1535-kkmphpt0171947.png%26ehk%3d2QIDvb4clc%252fL0o61GOknRjoKbFE2de0KzXGvEcjGrNs%253d%26risl%3d%26pid%3dImgRaw%26r%3d0&exph=331&expw=518&q=%e8%8c%83%e5%b0%8f%e5%8b%a4%e5%9b%be%e7%89%87&simid=608038602857676512&FORM=IRPRST&ck=39FE4E00719E28CD79120F0A406CDCDD&selectedIndex=4&itb=0'alt="范小勤" widsh="80px"height="80px">
-
-</div>
+<img src="C:\Users\Administrator\Pictures\微信截图_20250222103332.png"alt="范小勤" widsh="80px"height="80px">
  <div  style="
 max-width:700px;
 margin: 30px auto;
