--- a/index.html
+++ b/index.html
@@ -1,70 +1,34 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>测试网站</title>
     <style>
-p{
-color: rgb(79, 43, 43);
-padding: 20px;
-text-align: left;
-font-family: "weiruanyahei";
-}
-h2{
-font-size: 20px;
-color: #a52a2a;   
-}   
-.color{
- color: blue;   
-}
-#ikun{
- color: chartreuse;   
-}
-.wang{
- color: #00ffff;
- font-family:"";   
-}
-.father>.son{
-    color: #a52a2a;
-    font-weight: 200;
-}
-.father p{
-    color: aqua;
-}
-h3+p{
-  background-color: darkorange;  
-}
-.en:hover{
-    background-color: chocolate;
-}
+      .xm {
+        padding: auto;
+        color: rgb(97, 0, 252);
+        font-family: "微软雅黑";
+        font-style: normal;
+      }
+    </style>
+  </head>
+  <body>
+    <form action="">
+      <label class="xm">姓名</label>
+      <input type="text" placeholder="测试" />
+      <input type="radio" name="iii" value="male" />男
+      <input type="radio" name="iii" value="female" />女
+      <input type="radio" name="iii" value="female" />无<br />
+      <input type="checkbox" name="ve" value="bike" />自行车
+      <input type="checkbox" name="ve" value="car" />小汽车<br />
 
+      <input type="submit" value="提交" />
+    </form>
+    <div style="text-align: center">
+      <img src=/fxq.png alt="faq" width="80px"height="70px">
     
-
-</style>
-</head>
-<body>
- <h2 style="color: #00ffff;">你好</h2>   
- <h2 style="font-size: 20px;">坤坤</h2>   
- <h2 style="color: #a52a2a;">一个</h2>
- <p>测试</p>   
-<h1 class="color">个人练习生</h1>
-<h1 class="color">个人练习生</h1>
-<h4 id="ikun">网站测试</h4>
-<form>
-<label class="wang">王子异</label>
-<input type="text" placeholder="请输入姓名"><br>
-<input type="submit" value="提交"></form>
-<div class="father">
-<p class="son">子元素</p>
-<div>
- <p class="grandson">后代</p>
- <h4 class="en">卓</h4>   
-</div>
-</div>
-<p>这是一个普通标签</p>
-<h3>这是一个相邻的标签</h3>
-<p>这是一个普通标签</p>
- <h4 class="en">卓</h4>    
-</body>
+    <p style="color: brown;">范小勤</p>
+    </div>
+  </body>
 </html>
